--- a/botswana.html
+++ b/botswana.html
@@ -29,20 +29,16 @@
 
     <nav>
       <ul>
-        <li><a href="#location">Location</a></li>
-        <li><a href="#terrain">Terrain</a></li>
-        <li><a href="#natural">Natural Resources</a></li>
-        <li><a href="#climate">Climate</a></li>
-        <li><a href="#current">Current Issues</a></li>
-        <li><a href="#land">Land Usage</a></li>
-        <li><a href="#population">Population</a></li>
-        <li><a href="#ethnic">Ethnic Groups</a></li>
-        <li><a href="#demmographics">Demographics</a></li>
+        <li><a href="#introduction">Introduction</a></li>
+        <li><a href="#map">Map</a></li>
+        <li><a href="#geography">Geography</a></li>
+        <li><a href="#environment">Environment</a></li>
+        <li><a href="#peopleandsociety">People and Society</a></li>
       </ul>
     </nav>
 
 
-      <section>
+      <section id="map">
         <h2>Map</h2>
 
         <figure>
@@ -52,21 +48,21 @@
         </figure>
       </section>
 
-
+      <section id="geography">
         <h2>Geography</h2>
 
-        <article id="location">
+        <article>
           <h3>Location</h3>
             <p>Botswana is located in Southern Africa, north of South Africa.</p>
         </article>
 
-        <article id="terrain">
+        <article>
           <h3>Terrain</h3>
             <p> The terrain is predominantly flat to general rolling tableland. </P>
             <p> The Kalahari Desert is located in the southwest. </p>
         </article>
 
-          <article id="natural">
+          <article>
           <h3>Natural Resources</h3>
             <p>Natural resources include:</P>
                 <ul>
@@ -81,8 +77,9 @@
                   <li>Silver</li>
                 </ul>
           </article>
+        </section>
 
-
+        <section id="environment">
         <h2>Environment</h2>
 
         <figure>
@@ -91,12 +88,12 @@
             <a href="https://www.cia.gov/the-world-factbook/countries/botswana/images">CIA World Factbook</a></figcaption>
         </figure>
 
-          <article id="climate">
+          <article>
           <h3>Climate</h3>
             <p>The climate in Botswana is semiarid, with warm winters and hot summers.</p>
           </article>
 
-          <article id="current">
+          <article>
           <h3>Current Issues</h3>
           <ul>
             <li>Overgrazing</li>
@@ -106,7 +103,7 @@
           </ul>
           </article>
 
-          <article id="land">
+          <article>
           <h3>Land Usage</h3>
           <table>
             <caption>Land Usage in Botswana</caption>
@@ -141,15 +138,17 @@
             </tr>
           </table>
         </article>
+      </section>
 
+      <section id="peopleandsociety">
           <h2>People and Society</h2>
 
-            <article id="population">
+            <article>
             <h3>Population</h3>
               <p>The Population of Botswana is estimated to be 2,384,246.</p>
             </article>
 
-            <article id="ethnic">
+            <article>
             <h3>Ethnic Groups</h3>
               <table>
                 <caption>Ethnic Groups in Botswana</caption>
@@ -180,7 +179,7 @@
               </table>
             </article>
 
-            <article id="demmographics">
+            <article>
             <h3>Demographic Profile</h3>
               <p>Botswana has experienced an extremely quick decline in fertilty in comparison to the rest of Sub-Sarahan Africa. The fertilty rate has fallen from 5 children per woman, to around 2.4 children. Reasons include...</p>
               <ul>
@@ -195,7 +194,7 @@
               <p>Citizens of Botswana are called Batswana. Many Batswana prefer to live in their home country and will only cross borders for work on a temporary basis.</p>
 
           </article>
-
+        </section>
 
     </main>
 
