--- a/botswana.html
+++ b/botswana.html
@@ -37,7 +37,7 @@
 
       </section>
 
-
+      <div id=together>
       <section id="map">
         <h2>Map</h2>
 
@@ -78,7 +78,8 @@
                 </ul>
           </article>
         </section>
-
+      </div>
+      
         <section id="environment">
         <h2>Environment</h2>
 
