--- a/botswana.html
+++ b/botswana.html
@@ -78,7 +78,7 @@
                 </ul>
           </article>
         </section>
-    
+
 
         <section id="environment">
         <h2>Environment</h2>
@@ -184,7 +184,7 @@
             <h3>Demographic Profile</h3>
               <p>Botswana has experienced an extremely quick decline in fertilty in comparison to the rest of Sub-Sarahan Africa. The fertilty rate has fallen from 5 children per woman, to around 2.4 children. Reasons include...</p>
               <ul>
-                <li>Higer educatoin among women</li>
+                <li>Higher education among women</li>
                 <li>More women are participating in the work force</li>
                 <li>Increased contraceptive use</li>
                 <li>Later births</li>
