--- a/botswana.html
+++ b/botswana.html
@@ -90,7 +90,7 @@
         </figure>
 
           <article>
-          <h3>Climate</h3>
+          <h3 id="climate">Climate</h3>
             <p>The climate in Botswana is semiarid, with warm winters and hot summers.</p>
           </article>
 
