--- a/botswana.html
+++ b/botswana.html
@@ -104,7 +104,7 @@
           </ul>
           </article>
 
-          <article>
+          <article id="land">
           <h3>Land Usage</h3>
           <table>
             <caption>Land Usage in Botswana</caption>
@@ -149,7 +149,7 @@
               <p>The Population of Botswana is estimated to be 2,384,246.</p>
             </article>
 
-            <article>
+            <article id="eth">
             <h3>Ethnic Groups</h3>
               <table>
                 <caption>Ethnic Groups in Botswana</caption>
