--- a/botswana.html
+++ b/botswana.html
@@ -149,33 +149,33 @@
               <p>The Population of Botswana is estimated to be 2,384,246.</p>
             </article>
 
-            <article id="eth">
+            <article>
             <h3>Ethnic Groups</h3>
-              <table>
-                <caption>Ethnic Groups in Botswana</caption>
+              <table id="eth">
+                <caption id="eg">Ethnic Groups in Botswana</caption>
                 <tr>
-                  <th>Group</th>
-                  <th>Percent of Population</th>
+                  <th id="group">Group</th>
+                  <th id="pofp">Percent of Population</th>
                 </tr>
 
                 <tr>
-                  <td>Tswana/Setswana</td>
-                  <td>79%%</td>
+                  <td id="group">Tswana/Setswana</td>
+                  <td id="percent">79%%</td>
                 </tr>
 
                 <tr>
-                  <td>Kalanga</td>
-                  <td>11%</td>
+                  <td id="group">Kalanga</td>
+                  <td id="percent">11%</td>
                 </tr>
 
                 <tr>
-                  <td>Basarwa</td>
-                  <td>3%</td>
+                  <td id="group">Basarwa</td>
+                  <td id="percent">3%</td>
                 </tr>
 
                 <tr>
-                  <td>Other</td>
-                  <td>7%</td>
+                  <td id="group">Other</td>
+                  <td id="percent">7%</td>
                 </tr>
               </table>
             </article>
