--- a/botswana.html
+++ b/botswana.html
@@ -154,28 +154,28 @@
               <table id="eth">
                 <caption id="eg">Ethnic Groups in Botswana</caption>
                 <tr>
-                  <th id="group">Group</th>
-                  <th id="pofp">Percent of Population</th>
+                  <th class="group">Group</th>
+                  <th class="pofp">Percent of Population</th>
                 </tr>
 
                 <tr>
-                  <td id="group">Tswana/Setswana</td>
-                  <td id="percent">79%%</td>
+                  <td class="group">Tswana/Setswana</td>
+                  <td class="percent">79%%</td>
                 </tr>
 
                 <tr>
-                  <td id="group">Kalanga</td>
-                  <td id="percent">11%</td>
+                  <td class="group">Kalanga</td>
+                  <td class="percent">11%</td>
                 </tr>
 
                 <tr>
-                  <td id="group">Basarwa</td>
-                  <td id="percent">3%</td>
+                  <td class="group">Basarwa</td>
+                  <td class="percent">3%</td>
                 </tr>
 
                 <tr>
-                  <td id="group">Other</td>
-                  <td id="percent">7%</td>
+                  <td class="group">Other</td>
+                  <td class="percent">7%</td>
                 </tr>
               </table>
             </article>
