--- a/botswana.html
+++ b/botswana.html
@@ -180,10 +180,10 @@
               </table>
             </article>
 
-            <article>
+            <article id="demographic-profile">
             <h3>Demographic Profile</h3>
               <p>Botswana has experienced an extremely quick decline in fertilty in comparison to the rest of Sub-Sarahan Africa. The fertilty rate has fallen from 5 children per woman, to around 2.4 children. Reasons include...</p>
-              <ul>
+              <ul id="demlist">
                 <li>Higher education among women</li>
                 <li>More women are participating in the work force</li>
                 <li>Increased contraceptive use</li>
@@ -191,8 +191,8 @@
                 <li>Family planning programs</li>
               </ul>
 
-              <p>The prevalance rate of HIV/AIDS in Botswana is 22%, the third highest in the world.</p>
-              <p>Citizens of Botswana are called Batswana. Many Batswana prefer to live in their home country and will only cross borders for work on a temporary basis.</p>
+              <p class="bottom">The prevalance rate of HIV/AIDS in Botswana is 22%, the third highest in the world.</p>
+              <p class="bottom">Citizens of Botswana are called Batswana. Many Batswana prefer to live in their home country and will only cross borders for work on a temporary basis.</p>
           </article>
         </section>
 
