--- a/botswana.html
+++ b/botswana.html
@@ -160,7 +160,7 @@
 
                 <tr>
                   <td class="group">Tswana/Setswana</td>
-                  <td class="percent">79%%</td>
+                  <td class="percent">79%</td>
                 </tr>
 
                 <tr>
