--- a/botswana.html
+++ b/botswana.html
@@ -106,36 +106,36 @@
 
           <article id="land">
           <h3>Land Usage</h3>
-          <table>
-            <caption>Land Usage in Botswana</caption>
+          <table id="use">
+            <caption id="lub">Land Usage in Botswana</caption>
             <tr>
-              <th>Use</th>
-              <th>Percent</th>
+              <th class="x">Use</th>
+              <th class="y">Percent</th>
             </tr>
 
             <tr>
-              <td>Agriculture</td>
-              <td>45.8%</td>
+              <td class="x">Agriculture</td>
+              <td class="y">45.8%</td>
             </tr>
 
             <tr>
-              <td>Arable Land</td>
-              <td>.06%</td>
+              <td class="x">Arable Land</td>
+              <td class="y">.06%</td>
             </tr>
 
             <tr>
-              <td>Permanent Pasture</td>
-              <td>45.2%</td>
+              <td class="x">Permanent Pasture</td>
+              <td class="y">45.2%</td>
             </tr>
 
             <tr>
-              <td>Forest</td>
-              <td>19.8%</td>
+              <td class="x">Forest</td>
+              <td class="y">19.8%</td>
             </tr>
 
             <tr>
-              <td>Other</td>
-              <td>34.4%</td>
+              <td class="x">Other</td>
+              <td class="y">34.4%</td>
             </tr>
           </table>
         </article>
