--- a/botswana.html
+++ b/botswana.html
@@ -104,7 +104,7 @@
           </ul>
           </article>
 
-          <article>
+          <article id=land>
           <h3>Land Usage</h3>
           <table id="use">
             <caption id="lub">Land Usage in Botswana</caption>
