--- a/botswana.html
+++ b/botswana.html
@@ -184,11 +184,11 @@
             <h3>Demographic Profile</h3>
               <p>Botswana has experienced an extremely quick decline in fertilty in comparison to the rest of Sub-Sarahan Africa. The fertilty rate has fallen from 5 children per woman, to around 2.4 children. Reasons include...</p>
               <ul id="demlist">
-                <li>Higher education among women</li>
-                <li>More women are participating in the work force</li>
-                <li>Increased contraceptive use</li>
-                <li>Later births</li>
-                <li>Family planning programs</li>
+                <li class="list">Higher education among women</li>
+                <li class="list">More women are participating in the work force</li>
+                <li class="list">Increased contraceptive use</li>
+                <li class="list">Later births</li>
+                <li class="list">Family planning programs</li>
               </ul>
 
               <p class="bottom">The prevalance rate of HIV/AIDS in Botswana is 22%, the third highest in the world.</p>
