--- a/botswana.html
+++ b/botswana.html
@@ -43,7 +43,7 @@
 
         <figure>
           <img src="images/botswana-map.jpg" alt="Botswana's Okavango Delta." >
-          <figcaption> Botswana's Okavango Delta. Photo by
+          <figcaption class="caption"> Botswana's Okavango Delta. Photo by
             <a href="https://www.cia.gov/the-world-factbook/countries/botswana/images">CIA World Factbook</a></figcaption>
         </figure>
       </section>
@@ -65,7 +65,7 @@
           <article>
           <h3>Natural Resources</h3>
             <p>Natural resources include:</P>
-                <ul>
+                <ul id="nat">
                   <li>Diamonds</li>
                   <li>Copper</li>
                   <li>Nickel</li>
@@ -85,7 +85,7 @@
 
         <figure>
           <img src="images/botswana-sunset.jpg" alt="Sunset in Botswana.">
-          <figcaption>Sunset in Botswana. Photo by
+          <figcaption class="caption">Sunset in Botswana. Photo by
             <a href="https://www.cia.gov/the-world-factbook/countries/botswana/images">CIA World Factbook</a></figcaption>
         </figure>
 
