--- a/botswana.html
+++ b/botswana.html
@@ -64,8 +64,8 @@
 
           <article>
           <h3>Natural Resources</h3>
-            <p>Natural resources include:</P>
-                <ul id="nat">
+            <p class="nat">Natural resources include:</P>
+                <ul class="nat">
                   <li>Diamonds</li>
                   <li>Copper</li>
                   <li>Nickel</li>
