--- a/haas-final.html
+++ b/haas-final.html
@@ -5,3 +5,13 @@
     <title>TITLE</title>
     <link href="css/style-2.css" rel="stylesheet">
   </head>
+
+  <body>
+
+
+     <header>
+       <h1>Botswana</h1>
+     </header>
+
+  </body>
+</html>
