--- a/haas-final.html
+++ b/haas-final.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>TITLE</title>
+    <title>FINAL</title>
     <link href="css/style-2.css" rel="stylesheet">
   </head>
 
@@ -10,7 +10,7 @@
 
 
      <header>
-       <h1>TITLE</h1>
+       <h1>FINAL</h1>
      </header>
 
   </body>
