--- a/Final/home.html
+++ b/Final/home.html
@@ -16,7 +16,7 @@
      <nav>
        <ul>
          <li><a href="#">Home</a></li>
-          <li><a href="final/about.html">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#">Portfolio</a></li>
        </ul>
      </nav>
