--- a/Final/home.html
+++ b/Final/home.html
@@ -17,7 +17,7 @@
        <ul>
          <li><a href="#">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
        </ul>
      </nav>
 
