--- a/final.html
+++ b/final.html
@@ -4,4 +4,13 @@
     <meta charset="utf-8">
     <title>Home</title>
   </head>
+
+  <nav>
+     <ul>
+       <li><a href="home.html">Home</a></li>
+       <li><a href="about.html">About</a></li>
+       <li><a href="portfolio.html">Portfolio</a></li>
+
+     </ul>
+   </nav>
 </html>
