--- a/final.html
+++ b/final.html
@@ -5,12 +5,26 @@
     <title>Home</title>
   </head>
 
+  <body>
+
   <nav>
      <ul>
-       <li><a href="home.html">Home</a></li>
+       <li><a href="#home">Home</a></li>
        <li><a href="about.html">About</a></li>
        <li><a href="portfolio.html">Portfolio</a></li>
 
      </ul>
    </nav>
+
+   <main>
+
+
+
+
+
+
+
+
+   </main>
+ </body>
 </html>
