--- a/final.html
+++ b/final.html
@@ -7,18 +7,23 @@
 
   <body>
 
-  <nav>
-     <ul>
-       <li><a href="#home">Home</a></li>
-       <li><a href="about.html">About</a></li>
-       <li><a href="portfolio.html">Portfolio</a></li>
+    <nav>
+       <ul>
+         <li><a href="#home">Home</a></li>
+         <li><a href="about.html">About</a></li>
+         <li><a href="portfolio.html">Portfolio</a></li>
 
-     </ul>
-   </nav>
+       </ul>
+     </nav>
 
    <main>
 
 
+     <section id="home">
+            <h2>Home</h2>
+
+
+          </section>
 
 
 
