--- a/final.html
+++ b/final.html
@@ -6,23 +6,23 @@
   </head>
 
   <body>
+    <header>
+      <h1 id="home">Home</h1>
+    </header>
 
     <nav>
-       <ul>
-         <li><a href="#home">Home</a></li>
-         <li><a href="about.html">About</a></li>
-         <li><a href="portfolio.html">Portfolio</a></li>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
 
-       </ul>
-     </nav>
+      </ul>
+    </nav>
 
-   <main>
+    <main>
 
-
-     <section id="home">
-            <h2>Home</h2>
-
-
+      <section>
+            <h2>Hi</h2>
           </section>
 
 
@@ -30,6 +30,6 @@
 
 
 
-   </main>
- </body>
+    </main>
+  </body>
 </html>
