--- a/final.html
+++ b/final.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>Alex Haas Portfolio</title>
   </head>
 
   <body>
