--- a/about.html
+++ b/about.html
@@ -3,5 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>About</title>
+    <link href="css/style-two.css" rel="stylesheet">
   </head>
 </html>
