--- a/final.html
+++ b/final.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Alex Haas Portfolio</title>
+      <link href="css/style-two.css" rel="stylesheet">
   </head>
 
   <body>
@@ -23,7 +24,8 @@
 
       <section>
             <h2>Title</h2>
-          </section>
+      </section>
+
 
 
 
