--- a/portfolio.html
+++ b/portfolio.html
@@ -3,5 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>Portfolio</title>
+      <link href="css/style-two.css" rel="stylesheet">
   </head>
+
+  <body>
+    <header>
+      <h1>Portfolio</h1>
+    </header>
+
+
+  <main>
+    <section>
+         <h2>Photo 1</h2>
+
+         <figure>
+           <img src="images/model-one.jpg" alt="Model" >
+           <figcaption class="caption"> Alex Haas modeling</figcaption>
+         </figure>
+       </section>
+
+  </main>
+  </body>
 </html>
