--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,12 @@
       <h1>Portfolio</h1>
     </header>
 
+    <nav>
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </nav>
 
   <main>
     <section>
