--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 
     <nav>
       <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="final.html">Home</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
