--- a/about.html
+++ b/about.html
@@ -5,4 +5,21 @@
     <title>About</title>
     <link href="css/style-two.css" rel="stylesheet">
   </head>
+
+  <body>
+    <header>
+      <h1>About</h1>
+    </header>
+
+    <nav>
+      <ul>
+        <li><a href="final.html">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+      </ul>
+    </nav>
+
+  <main>
+
+  </main>
+  </body>
 </html>
