--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,16 @@
            <img src="images/model-one.jpg" alt="Model">
            <figcaption class="caption"> Alex Haas modeling</figcaption>
          </figure>
-       </section>
+    </section>
+
+    <section>
+        <h2>Photo 2</h2>
+
+          <figure>
+            <img src="images/flower-one.jpg" alt="Model">
+            <figcaption class="caption"> Flower</figcaption>
+          </figure>
+    </section>
 
   </main>
     <footer>
