--- a/final.html
+++ b/final.html
@@ -23,7 +23,9 @@
     <main>
 
       <section>
-            <h2>Title</h2>
+        <h2>Why Is Photography Important?</h2>
+      <p>Wordsssssssssss</p>
+
       </section>
 
 
