--- a/about.html
+++ b/about.html
@@ -20,6 +20,12 @@
 
   <main>
 
+    <section>
+      <h2>About Me</h2>
+    <p> me me me me me</P>
+    </section>
+
+
   </main>
     <footer>
       <p>Source:ME</p>
