--- a/final.html
+++ b/final.html
@@ -23,11 +23,15 @@
     <main>
 
       <section>
-        <h2>Why Is Photography Important?</h2>
+        <h2>What is Photography</h2>
       <p>Wordsssssssssss</p>
 
       </section>
 
+      <section>
+        <h2> Why is Photography Important?</h2>
+      <p>more wordssssssss</p>
+      </section>
 
 
     </main>
