--- a/final.html
+++ b/final.html
@@ -33,6 +33,11 @@
       <p>more wordssssssss</p>
       </section>
 
+      <section>
+        <h2> World Famous Photographers</h2>
+      <p>INSERT LIST SOMEWHERE HERE</p>
+      </section>
+
 
     </main>
       <footer>
