--- a/about.html
+++ b/about.html
@@ -22,7 +22,17 @@
 
     <section>
       <h2>About Me</h2>
+      <figure>
+        <img src="images/alex-profile.jpg" alt="Alex">
+        <figcaption class="caption"> Alex Haas</figcaption>
+      </figure>
     <p> me me me me me</P>
+    </section>
+
+
+    <section>
+      <h2>Contact</h2>
+    <p> INSERT CONTACT FORM SOMEWHERE</P>
     </section>
 
 
