--- a/about.html
+++ b/about.html
@@ -26,7 +26,10 @@
         <img src="images/alex-profile.jpg" alt="Alex">
         <figcaption class="caption"> Alex Haas</figcaption>
       </figure>
-    <p> me me me me me</P>
+    <p>My name is Alex Haas, and I am a junior at the University of Miami.</P>
+    <p>I have been interested in photography since the begginning of high school. This is when I began to travel the world and take pictures.</P>
+    <p>I enjoy taking photos of nature, wildlife and architecture the most.</p>
+    <p>I am excited to put my work out into the world.</p>
     </section>
 
 
