--- a/final.html
+++ b/final.html
@@ -22,18 +22,18 @@
 
     <main>
 
-      <section>
+      <section class="intro">
         <h2>What is Photography</h2>
       <p>Wordsssssssssss</p>
 
       </section>
 
-      <section>
+      <section class="intro">
         <h2> Why is Photography Important?</h2>
       <p>more wordssssssss</p>
       </section>
 
-      <section>
+      <section class="intro">
         <h2> World Famous Photographers</h2>
       <p>INSERT LIST SOMEWHERE HERE</p>
       </section>
