--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
   <main>
 
-    <section>
+    <section class="about">
       <h2>About Me</h2>
       <figure>
         <img src="images/alex-profile.jpg" alt="Alex">
@@ -33,7 +33,7 @@
     </section>
 
 
-    <section>
+    <section class="about">
       <h2>Contact</h2>
     <p> INSERT CONTACT FORM SOMEWHERE</P>
     </section>
