--- a/final.html
+++ b/final.html
@@ -24,8 +24,8 @@
 
       <section class="intro">
         <h2>What is Photography</h2>
-      <p>Wordsssssssssss</p>
-
+      <p>Photography means "Drawing with light"</p>
+      <p>It is the art of creating images by recording light through either a sensor or through film.</p>
       </section>
 
       <section class="intro">
