--- a/final.html
+++ b/final.html
@@ -41,7 +41,7 @@
 
     </main>
       <footer>
-        <p>Source:ME</p>
+        <p>Sources: <a href="https://imma.ie/what-is-art/series-3-materials-methodologies/photography/">Irish Museum of Modern Art</a></p>
       </footer>
   </body>
 </html>
