--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
     <section class="about">
       <h2>About Me</h2>
-      <figure>
+      <figure id="profile">
         <img src="images/alex-profile.jpg" alt="Alex">
         <figcaption class="caption"> Alex Haas</figcaption>
       </figure>
