--- a/index.html
+++ b/index.html
@@ -1,78 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>Alex Haas</title>
+    <meta charset="utf-8">
+    <title>Alex Haas Portfolio</title>
+      <link href="css/style-two.css" rel="stylesheet">
   </head>
 
   <body>
-    <h1>All About Alex Haas</h1>
+    <header>
+      <h1 id="home">Alex Haas Photography</h1>
+    </header>
 
-    <p>Alex Haas is a Junior at the University of Miami.</p>
-    <p>She is from the suburbs of Philadelphia, Pennsylvania.</p>
-    <p>She is a Journalism major with minors in Biology and Art/Art History.</p>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
 
+      </ul>
+    </nav>
 
+    <main>
 
-    <h2>Get to Know Alex</h2>
+      <section class="intro">
+        <h2>What is Photography</h2>
+      <p>Photography means "Drawing with light"</p>
+      <p>It is the art of creating images by recording light through either a sensor or through film.</p>
+      </section>
 
-    <table>
-      <caption>True/False Questions</caption>
-      <tr>
-        <th>Question</th>
-        <th>True</th>
-        <th>False</th>
-      </tr>
+      <section class="intro">
+        <h2> Why is Photography Important?</h2>
+      <p>more wordssssssss</p>
+      </section>
 
-      <tr>
-        <td>Alex Has a Dog</td>
-        <td>x</td>
-        <td></td>
-
-      </tr>
-
-      <tr>
-        <td>Alex is an Only Child</td>
-        <td></td>
-        <td>x</td>
-
-      </tr>
-
-      <tr>
-        <td>Alex is a Vegetarian</td>
-        <td></td>
-        <td>x</td>
-
-      </tr>
-
-      <tr>
-        <td>Alex Loves Shopping</td>
-        <td>x</td>
-        <td></td>
-
-        <tr>
-          <td>Alex Hates Seafood</td>
-          <td>x</td>
-          <td></td>
+      <section class="intro">
+        <h2> World Famous Photographers</h2>
+      <p>INSERT LIST SOMEWHERE HERE</p>
+      </section>
 
 
-      </tr>
-      </table>
-
-    <h2>Alex's Favorite Hobbies</h2>
-
-    <ul>
-      <li>Hanging out with friends</li>
-      <li>Sleeping</li>
-      <li>Photography</li>
-    </ul>
-
-
-    <h2>Alex's Favorite...</h2>
-
-      <p> Alex's favorite animal is a sea turtle. She also likes dogs, especially her pet mini Labradoodle.</p>
-      <p> Alex's favorite food is mac and cheese. She also like dino nuggets. Alex cannot cook very well.</p>
-      <p> Alex's favorite color is turquoise.</p>
-
+    </main>
+      <footer>
+        <p>Sources: <a href="https://imma.ie/what-is-art/series-3-materials-methodologies/photography/">Irish Museum of Modern Art</a></p>
+      </footer>
   </body>
 </html>
