--- a/portfolio.html
+++ b/portfolio.html
@@ -37,6 +37,15 @@
           </figure>
     </section>
 
+    <section>
+         <h2>Photo 3</h2>
+
+         <figure>
+           <img src="images/model-two.jpg" alt="Model">
+           <figcaption class="caption"> Alex Haas modeling</figcaption>
+         </figure>
+    </section>
+
   </main>
     <footer>
       <p>Source:ME</p>
