--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,11 @@
 
   <main>
     <section>
-         <h2>Photo 1</h2>
+         <h3>My Top Five Photographs</h3>
+    </section>
+
+    <section>
+         <h2>1.</h2>
 
          <figure>
            <img src="images/model-one.jpg" alt="Model">
@@ -29,7 +33,7 @@
     </section>
 
     <section>
-        <h2>Photo 2</h2>
+        <h2>2.</h2>
 
           <figure>
             <img src="images/flower-one.jpg" alt="Model">
@@ -38,11 +42,20 @@
     </section>
 
     <section>
-         <h2>Photo 3</h2>
+         <h2>3.</h2>
 
          <figure>
            <img src="images/model-two.jpg" alt="Model">
            <figcaption class="caption"> Alex Haas modeling</figcaption>
+         </figure>
+    </section>
+
+    <section>
+         <h2>4.</h2>
+
+         <figure>
+           <img src="images/lions.jpg" alt="Lions in Botswana">
+           <figcaption class="caption">Male Lions in Botswana</figcaption>
          </figure>
     </section>
 
