--- a/portfolio.html
+++ b/portfolio.html
@@ -20,11 +20,11 @@
 
   <main>
     <section>
-         <h3>My Top Five Photographs</h3>
+         <h3>My Favorite Photographs</h3>
     </section>
 
     <section>
-         <h2>1.</h2>
+         <h2>1. Self Portrait</h2>
 
          <figure>
            <img src="images/model-one.jpg" alt="Model">
@@ -33,7 +33,7 @@
     </section>
 
     <section>
-        <h2>2.</h2>
+        <h2>2. Flowers at Longwood Gardens, PA</h2>
 
           <figure>
             <img src="images/flower-one.jpg" alt="Model">
@@ -42,7 +42,7 @@
     </section>
 
     <section>
-         <h2>3.</h2>
+         <h2>3. Portrait from ART310 Final Project: Hysteria</h2>
 
          <figure>
            <img src="images/model-two.jpg" alt="Model">
@@ -50,12 +50,17 @@
          </figure>
     </section>
 
-    <section>
-         <h2>4.</h2>
+    <section id="wildlife">
+         <h2>4. Wildlife Witnessed on Safari in Botswana</h2>
 
          <figure>
            <img src="images/lions.jpg" alt="Lions in Botswana">
            <figcaption class="caption">Male Lions in Botswana</figcaption>
+         </figure>
+
+         <figure>
+           <img src="images/leopard.jpg" alt="Leopard in Botswana">
+           <figcaption class="caption">Leopard hanging out in a tree in Botswana</figcaption>
          </figure>
     </section>
 
