--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
            <figcaption class="caption">Male Lions in Botswana</figcaption>
          </figure>
 
-         <figure>
+         <figure id="leopard">
            <img src="images/leopard.jpg" alt="Leopard in Botswana">
            <figcaption class="caption">Leopard hanging out in a tree in Botswana</figcaption>
          </figure>
