--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 
   <main>
     <section>
-         <h3>My Favorite Photographs</h3>
+         <h3 id="favorite">My Favorite Photographs</h3>
     </section>
 
     <section>
