--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
     <section id="wildlife">
          <h2>4. Wildlife Witnessed on Safari in Botswana</h2>
 
-         <figure>
+         <figure id="lion">
            <img src="images/lions.jpg" alt="Lions in Botswana">
            <figcaption class="caption">Male Lions in Botswana</figcaption>
          </figure>
