--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,13 @@
     </nav>
 
   <main>
-  
+
     <section>
          <h2>1. Self Portrait</h2>
 
          <figure>
            <img src="images/model-one.jpg" alt="Model">
-           <figcaption class="caption"> Alex Haas modeling</figcaption>
+           <figcaption class="caption"> Alex Haas modeling.</figcaption>
          </figure>
     </section>
 
@@ -34,7 +34,7 @@
 
           <figure>
             <img src="images/flower-one.jpg" alt="Model">
-            <figcaption class="caption"> Flower</figcaption>
+            <figcaption class="caption">Pink flowers at Longwood Gardens.</figcaption>
           </figure>
     </section>
 
@@ -43,7 +43,7 @@
 
          <figure>
            <img src="images/model-two.jpg" alt="Model">
-           <figcaption class="caption"> Alex Haas modeling</figcaption>
+           <figcaption class="caption"> Alex Haas demonstrating the feelings of a panic attack in the form of a photograph.</figcaption>
          </figure>
     </section>
 
@@ -52,18 +52,18 @@
 
          <figure id="lion">
            <img src="images/lions.jpg" alt="Lions in Botswana">
-           <figcaption class="caption">Male Lions in Botswana</figcaption>
+           <figcaption class="caption">Teenage male brother lions in Botswana.</figcaption>
          </figure>
 
          <figure id="leopard">
            <img src="images/leopard.jpg" alt="Leopard in Botswana">
-           <figcaption class="caption">Leopard hanging out in a tree in Botswana</figcaption>
+           <figcaption class="caption">Leopard hanging out in a tree in Botswana.</figcaption>
          </figure>
     </section>
 
   </main>
     <footer>
-      <p>Source:ME</p>
+      <p>Source: Alex Haas Photography</p>
     </footer>
   </body>
 </html>
