--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     <nav>
       <ul>
         <li><a href="final.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
       </ul>
     </nav>
