--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
       <ul>
         <li><a href="final.html">Home</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
       </ul>
     </nav>
 
