--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
     </section>
 
 
-    <section>
+    <section class="hysteria">
          <h2>3. Portrait from ART310 Final Project: Hysteria</h2>
 
          <figure>
