--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <section class="intro">
         <h2> World Famous Photographers</h2>
         <p>INSERT LIST SOMEWHERE HERE</p>
+        <p>Source: <a href="https://artincontext.org/famous-photographers/">Art In Context</a></p>
       </section>
 
 
