--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
       </section>
 
       <section class="intro">
-        <h2> World Famous Photographers</h2>
-        <p>INSERT LIST SOMEWHERE HERE</p>
+        <h2> Classic World Famous Photographers</h2>
+        <ul class="famous">
+          <li>Edward Henry Weston</li>
+          <li>Man Ray</li>
+          <li>Jacques Henri Lartigue</li>
+          <li>Dorothea Lange </li>
+          <li>Eliot Porter</li>
+        </ul>
         <p>Source: <a href="https://artincontext.org/famous-photographers/">Art In Context</a></p>
       </section>
 
