--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li>Dorothea Lange </li>
           <li>Eliot Porter</li>
         </ul>
-        <p>Source: <a href="https://artincontext.org/famous-photographers/">Art In Context</a></p>
+        <p id="first-source">Source: <a href="https://artincontext.org/famous-photographers/">Art In Context</a></p>
       </section>
 
 
