--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
 
       <section class="intro">
         <h2> Why is Photography Important?</h2>
-        <p>more wordssssssss</p>
+        <ol id="why">
+          <li>Captures memories that are frozen in time</li>
+          <li>Teaches us important details about the past</li>
+          <li>A way to tell and preserve stories</li>
+          <li>Helps people express themselves</li>
+          <li>Photography is an inspirational art</li>
+        </ol>
+        <p id="romantic"> Source: <a href="https://wildromanticphotography.com/melbourne/tips-advice/why-is-photography-important/#:~:text=Photographs%20play%20an%20important%20role%20in%20everyone's%20life%20%E2%80%93%20they%20connect,to%20know%20who%20we%20are.&text=Photography%20has%20the%20power%20to,a%20change%20for%20the%20better.">Wild Romantic Photography</a></p>
       </section>
 
       <section class="intro">
@@ -40,7 +47,7 @@
           <li>Man Ray</li>
           <li>Jacques Henri Lartigue</li>
           <li>Dorothea Lange </li>
-          <li>Eliot Porter</li>
+          <li>Annie Leibovitz</li>
         </ul>
         <p id="first-source">Source: <a href="https://artincontext.org/famous-photographers/">Art In Context</a></p>
       </section>
