--- a/about.html
+++ b/about.html
@@ -36,13 +36,14 @@
 
     <section class="about">
       <h2>Contact</h2>
-    <p> INSERT CONTACT FORM SOMEWHERE</P>
+    <p>Email: <a href="mailto:arh173@miami.edu">arh173@miami.edu</a></P>
+    <p id="linkedin">LinkedIn: <a href="https://www.linkedin.com/in/alexandra-haas-320b6822b/">Alexandra Haas</a></p>
     </section>
 
 
   </main>
     <footer>
-      <p>Source:ME</p>
+      <p>Source: Alex Haas</p>
     </footer>
   </body>
 </html>
