--- a/about.html
+++ b/about.html
@@ -34,10 +34,11 @@
     </section>
 
 
-    <section class="about">
+    <section class="about" id="contact">
       <h2>Contact</h2>
     <p>Email: <a href="mailto:arh173@miami.edu">arh173@miami.edu</a></P>
     <p id="linkedin">LinkedIn: <a href="https://www.linkedin.com/in/alexandra-haas-320b6822b/">Alexandra Haas</a></p>
+    <p id="fb">Facebook: <a href="https://www.facebook.com/profile.php?id=100010341422562">Alex Haas</a></p>
     </section>
 
 
