--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Alex Haas Portfolio</title>
-      <link href="css/style-two.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width; initial-scale=1;">
+      <link href="css/style-two.css" media="screen" rel="stylesheet">
+      <link href="css/mobile.css" media="screen" rel="stylesheet">
   </head>
 
   <body>
