--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Alex Haas Portfolio</title>
-    <meta name="viewport" content="width=device-width; initial-scale=1;">
-      <link href="css/style-two.css" media="screen" rel="stylesheet">
-      
+      <link href="css/style-two.css" rel="stylesheet">
   </head>
 
   <body>
