--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p id="romantic">Source: <a href="https://wildromanticphotography.com/melbourne/tips-advice/why-is-photography-important/#:~:text=Photographs%20play%20an%20important%20role%20in%20everyone's%20life%20%E2%80%93%20they%20connect,to%20know%20who%20we%20are.&text=Photography%20has%20the%20power%20to,a%20change%20for%20the%20better.">Wild Romantic Photography</a></p>
       </section>
 
-      <section class="intro">
+      <section class="intro" id="world">
         <h2>Classic World Famous Photographers</h2>
         <ul class="famous">
           <li>Edward Henry Weston</li>
