--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h2>What is Photography</h2>
         <p>Photography means "Drawing with light"</p>
         <p>It is the art of creating images by recording light through either a sensor or through film.</p>
+        <p id="irish">Source: <a href="https://imma.ie/what-is-art/series-3-materials-methodologies/photography/">Irish Museum of Modern Art</a></p>
       </section>
 
       <section class="intro">
@@ -55,7 +56,7 @@
 
     </main>
       <footer>
-        <p>Sources: <a href="https://imma.ie/what-is-art/series-3-materials-methodologies/photography/">Irish Museum of Modern Art</a></p>
+      <p>Source: Alex Haas Photography</p>
       </footer>
   </body>
 </html>
