--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
   </main>
     <footer>
-      <p>Source: Alex Haas</p>
+      <p>Source: Alex Haas Photography</p>
     </footer>
   </body>
 </html>
