Remove Custom Domain References

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
     </section>
 
     <section id="wildlife">
-         <h2>4. Wildlife Witnessed on Safari in Botswana</h2>
+         <h2>4. Wildlife Witnessed on Botswana Safari</h2>
 
          <figure id="lion">
            <img src="images/lions.jpg" alt="Lions in Botswana">
