--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
   <main>
 
     <section>
-        <h2>1. Flowers at Longwood Gardens PA</h2>
+        <h2>1. Flowers at Longwood Gardens, PA</h2>
 
           <figure>
             <img src="images/flower-one.jpg" alt="Model">
