--- a/botswana.html
+++ b/botswana.html
@@ -99,8 +99,8 @@
           <ul>
             <li>Overgrazing</li>
             <li>Desertification</li>
-            <li>Limited freshwater resources</li>
-            <li>Air pollution</li>
+            <li>Limited Freshwater Resources</li>
+            <li>Air Pollution</li>
           </ul>
           </article>
 
